# operius

./: .gitignore  README.md  SURF.MD  add_github_repo_simple.py  pyproject.toml
backend/: conn.py  demo.py  ingestion_pipeline.py  k8s-agent.py  requirements.txt  search_agent.py  test_k8s_connection.py  vector_store.py
backend/demo/: chat.py  demo.py
backend/sources/: add_github_repo.py  github.py  kubernetes.py
chroma_db/: chroma.sqlite3
google-adk/: .env.example  .gitignore  README.md
google-adk/src/adk_agent/agents/: core_agent.py
google-adk/src/adk_agent/config/: loader.py  runtime.yaml
infra/: postgres.tf
infra/demo/: README.md  kind-config.yaml  setup-kind-cluster.sh  teardown-kind-cluster.sh
tests/: test_ingestion_pipeline.py  test_kubernetes_source.py  test_search_agent.py  test_vector_store.py
