[tool.poetry]
name = "operius"
version = "0.1.0"
description = "AI-Powered Knowledge Base for GitHub and Kubernetes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
asyncpg = "^0.30.0"
kubernetes = "^33.1.0"
httpx = "^0.27.0"
tenacity = "^9.0.0"
chromadb = "^1.0.20"
sentence-transformers = "^5.1.0"
pgvector = "^0.3.6"
pydantic = "^2.0.0"
python-dateutil = "^2.9.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"
coverage = "^7.6.0"

[tool.poetry.scripts]
operius-demo = "backend.demo:main"
operius-test-k8s = "backend.test_k8s_connection:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
